--- a/digital_clock.css
+++ b/digital_clock.css
@@ -20,6 +20,15 @@
 }
 
 .clock {
+  height: 100vh;
+  width: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.clock {
     display: flex;
     position: absolute;
     text-align: center;
